tests/snapshots/options__insta_opt_cycle_header_lines-3.snap
---
source: tests/options.rs
expression: h.buffer_view()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  d                                                                             "
"  c                                                                             "
"> b                                                                             "
"  a                                                                             "
"  4/3                                                                        1/0"
">                                                                               "
