tests/snapshots/options__insta_opt_header_lines_reverse.snap
---
source: tests/options.rs
expression: h.buffer_view()
---
">                                                                               "
"  3/2                                                                        0/0"
"  a                                                                             "
"> b                                                                             "
"  c                                                                             "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
