tests/snapshots/options__insta_opt_header_reverse_inline_info.snap
---
source: tests/options.rs
expression: h.buffer_view()
---
">   < 3/3                                                                    0/0"
"test_header                                                                     "
"> a                                                                             "
"  b                                                                             "
"  c                                                                             "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
